# service-mesh-benchmark

./: .env.example  .env.production.example  .github  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile  FRONTEND_DESIGN.md  Fichamento.code-workspace  Makefile  POETRY_SETUP.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REPORT.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_HARDENING.md  SECURITY_IMPLEMENTATION.md  SECURITY_QUICKSTART.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  eBPF_IMPLEMENTATION_SUMMARY.md  generate-report.py  pyproject.toml  run-4way-benchmarks.sh  run-benchmarks-with-ebpf.sh  run-comprehensive-benchmarks.sh
.claude/: implementation-plan.md
.devcontainer/: Dockerfile
.devcontainer/scripts/: install-cillium.sh  post-create.sh
.github/workflows/: benchmark.yml  ci-cd.yml  security-scan.yml  test.yml
ansible/: .gitignore  README.md  ansible.cfg
ansible/inventory/: .gitkeep
ansible/playbooks/: deploy-app.yml  setup-cilium.yml  setup-istio.yml  setup-server.yml
ansible/templates/: env.production.j2
api/: config.py  database.py  main.py  models.py  state.py
api/endpoints/: benchmarks.py  ebpf.py  health.py  kubernetes.py  metrics.py  reports.py
benchmarks/scripts/: collect-ebpf-metrics.sh  collect-metrics.sh  compare-ebpf-vs-sidecar.sh  grpc-test.sh  http-load-test.sh  ml-workload.sh  test-cilium-l7.sh  test-network-policies.sh  websocket-test.sh
config/: README.md
config/local/: .yamllint.yaml  docker-compose.yml
config/monitoring/: prometheus.yml
config/templates/: .env.example  backend.tf.example  terraform.tfvars.example
develop/: Makefile  pyproject.toml
develop/.devcontainer/: Dockerfile  devcontainer.json
docker/api/: Dockerfile
docker/health-check/: Dockerfile  app.py  requirements.txt
docker/ml-workload/: Dockerfile  Dockerfile.inference  app.py  inference.py  requirements.txt
docs/: COVERAGE_QUICK_REFERENCE.md  ORACLE_CLOUD_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md  README.md  TESTING.md  TESTING_DIAGRAM.md  TESTING_QUICK_REFERENCE.md  architecture.md
docs/ebpf/: EBPF_FEATURES_SUMMARY.md  JIT_OPTIMIZATION.md  ebpf-features.md  xdp-implementation.md
docs/guides/: deployment.md  infrastructure.md  mcp-integration.md  migration-guide.md  production-deployment.md  quick-start.md  quickstart.md  terraform-ansible-deployment.md  terraform.md
docs/reference/: IMPLEMENTATION_COMPLETE.md  METHODOLOGICAL_GAP_ANALYSIS.md  PRIORITY_IMPLEMENTATIONS_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  config.md  develop.md  production-ready-changes.md  reorganization-complete.md  reorganization-summary.md  tools.md  workloads.md
docs/security/: SECURITY_AUDIT_FINDINGS.md  SECURITY_HARDENING.md  SECURITY_IMPLEMENTATION.md  SECURITY_QUICKSTART.md
docs/testing/: COVERAGE.md  POETRY_MIGRATION_COMPLETE.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md
ebpf-probes/: README.md  SETUP.md
ebpf-probes/latency-probe/: README.md
ebpf-probes/latency-probe/latency-probe-ebpf/: Cargo.toml
ebpf-probes/latency-probe/latency-probe-ebpf/src/: main.rs
ebpf-probes/latency-probe/latency-probe-userspace/: Cargo.toml
ebpf-probes/latency-probe/latency-probe-userspace/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json
kubernetes/backup/: backup-cronjob.yaml
kubernetes/database/: postgres-statefulset.yaml
kubernetes/network-policies/: allow-dns-egress.yaml  allow-grpc-benchmark.yaml  allow-http-benchmark.yaml  default-deny.yaml
kubernetes/rbac/: benchmark-runner.yaml  workload-service-account.yaml
kubernetes/workloads/: baseline-grpc-service.yaml  baseline-http-service.yaml  database-cluster.yaml  grpc-service.yaml  health-check-service.yaml  http-service.yaml  ml-batch-job.yaml  websocket-service.yaml
scripts/: apply-security-contexts.sh  auto-fix-shell-quotes.py  backup-to-oci.sh  deploy.sh  fix-shell-security.sh  init-db.sql  setup-server.sh
src/analysis/: __init__.py  cost_analysis.py  statistical_analysis.py
src/api/: README.md  __init__.py  config.py  database.py  init_db.py  main.py  models.py  persistence.py  requirements.txt  settings.py  state.py
src/common/: __init__.py  paths.py
src/probes/: Cargo.toml  IMPLEMENTATION_STATUS.md  Makefile  README.md  SETUP.md  measure_overhead.py  validate_overhead.py
src/probes/common/: Cargo.toml
src/probes/common/src/: constants.rs  lib.rs  types.rs
src/probes/latency/: build.sh  deploy-to-node.sh  verify-jit.sh
src/probes/latency/daemon/: Cargo.toml
src/probes/latency/daemon/src/: collector.rs  events.rs  exporter.rs  lib.rs  loader.rs  main.rs  types.rs
src/probes/latency/kernel/: Cargo.toml
src/probes/latency/kernel/.cargo/: config.toml
src/probes/latency/kernel/src/: handlers.rs  helpers.rs  main.rs  maps.rs  socket_parser.rs
src/tests/: __init__.py  conftest.py  models.py  pytest.ini  run_tests.py
terraform/: README.md  cloud-init.yaml  main.tf
terraform/oracle-cloud/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: .coveragerc  README.md  conftest.py  models.py  pytest.ini  requirements.txt  run_tests.py  test_phase1_predeployment.py  test_phase2_infrastructure.py  test_phase3_baseline.py  test_phase4_servicemesh.py  test_phase6_comparative.py  test_phase7_stress.py
tools/: README.md
workloads/kubernetes/: baseline-grpc-service.yaml  baseline-h2c-service.yaml  baseline-http-service.yaml  baseline-ml-service.yaml  benchmark-comparison.yaml  cilium-ebpf-grpc-service.yaml  cilium-ebpf-h2c-service.yaml  cilium-ingress-http-service.yaml  cilium-l7-grpc-service.yaml  cilium-l7-h2c-service.yaml  cilium-l7-http-service.yaml  cilium-l7-ml-service.yaml  database-cluster.yaml  echo-server.yaml  fortio-server.yaml  grpc-service.yaml  http-service.yaml  http2-service.yaml  istio-ambient-grpc-service.yaml  istio-ambient-h2c-service.yaml  istio-ambient-http-service.yaml  istio-ambient-ml-service.yaml  istio-config.yaml  kustomization.yaml  load-generator.yaml  ml-batch-job-compute.yaml  ml-batch-job.yaml  ml-inference-service.yaml  namespace.yaml  network-policies.yaml  (+1 more)
(+48 files in other folders)
