[workspace]
resolver = "2"
members = [
    "common",
    "latency/kernel",
    "latency/daemon",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Service Mesh Benchmark Contributors"]

[workspace.dependencies]
# Shared dependencies for all crates
probe-common = { path = "common" }

# eBPF dependencies
aya-ebpf = "0.1.0"

# Userspace dependencies
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
bytes = "1"
chrono = "0.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
