[package]
name = "latency-probe-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"

[[bin]]
name = "latency-probe"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
