[package]
name = "probe-common"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Shared types and utilities for eBPF probes"

[lib]
name = "probe_common"
path = "src/lib.rs"

[dependencies]
# Optional Aya dependency for userspace Pod trait implementations
aya = { version = "0.12", optional = true, default-features = false }

[features]
default = []
userspace = ["aya"]
