[package]
name = "latency-probe-userspace"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "latency_probe_userspace"
path = "src/lib.rs"

[dependencies]
# Shared common types
probe-common = { path = "../../common", features = ["userspace"] }

# eBPF userspace framework
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2.1"

# CLI and configuration
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Data handling
bytes = "1"
chrono = "0.4"

[[bin]]
name = "latency-probe"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
