[package]
name = "latency-probe-ebpf"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
aya-ebpf = "0.1.0"
probe-common = { path = "../../common" }

[[bin]]
name = "latency-probe"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
